--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,15 @@
     "src/components/HeaderAlt.astro": true,
     "src/components/HeaderAlt.ts": true,
     "src/components/MenuAlt.astro": true,
+    ".vscode/extensions.json": true,
+    ".vscode/launch.json": true,
+    "public/manifest.json": true,
+    ".eslintrc.js": true,
+    ".gitignore": true,
+    ".prettierrc": true,
+    "astro.config.mjs": true,
+    "package.json": true,
+    "tsconfig.json": true,
   },
   "eslint.validate": [
     "javascript",
