--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "^18.0.6",
     "@typescript-eslint/parser": "^5.32.0",
     "astro": "^1.0.0-rc.4",
+    "autoprefixer": "^10.4.8",
     "eslint": "^8.21.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-standard": "^17.0.0",
